# androidbuilder

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/runtime/: README.txt
app/src/main/assets/termux/: build.sh  (+1 more)
app/src/main/cpp/: CMakeLists.txt  local_guard_llama.cpp
docs/ai-context/: 00-项目总览.md  01-架构.md  02-业务流程.md
docs/architecture/: batch-completeness-plan.md  compile-driven-validation.md  compiler-in-the-loop-minimal.md  large-app-convergence.md  noncompliant-model-convergence.md
docs/superpowers/plans/: 2026-05-27-structured-plan-execution.md  2026-06-08-background-context-negotiation.md  2026-06-09-hermes-execution-pipeline.md  2026-06-09-hermes-remediation.md  2026-06-10-dependency-capability-plan.md  2026-06-10-remove-local-ai-model.md  2026-06-11-execution-speed-and-ui-redesign.md  2026-06-11-hermes-autonomous-execution.md  2026-06-11-hermes-parallel-hardening.md  2026-06-11-hermes-parallel-subagents.md  2026-06-12-context-existence-semantics.md  2026-06-12-convergence-and-scheduling-fixes.md  2026-06-12-incremental-generation.md  2026-06-12-layered-context.md  2026-06-12-retry-draft-memory.md  2026-06-13-execution-flow-overhaul.md
docs/superpowers/specs/: 2026-05-27-structured-plan-execution-design.md  2026-06-08-background-context-negotiation-design.md  2026-06-09-hermes-execution-pipeline-design.md  2026-06-10-remove-local-ai-model-design.md
embedded-runtime/: build.gradle
tools/: build-offline-maven.sh  build-runtime-bootstrap.sh  offline-maven-README.md
(+440 files in other folders)
